2003/10/28 16:47 rwmcfa1

	* Gtk2/MANIFEST: missing files added

	* Gtk2/Makefile.PL: updates to new system, MakeHelper. use strict and 
	use warnings safe now

	* Gtk2/xs/Gtk2.xs: put things in an appropriate doc object

2003/10/27 19:38 muppetman

	* Makefile.PL: documentation generation experimentation

	* xs/GdkEvent.xs: apidoc pod bundles all of the event subtypes into
	GdkEvent's docs; which creates another problem, namely, they all have
	the same instance name in their call signatures.  so, add =signature
	pods to give them better names.  implemented a few of the more
	esoteric members, too.
	
	* xs/GtkCellRenderer.xs: document CellRendererState and
	CellRendererMode with CellRenderer.

2003/10/27 14:34 muppetman

	* xs/GtkCellRenderer.xs: merged the cellrenderer subclassing stuff,
	with lots of new-style experimental documentation.

	* t/30.GtkCellRenderer.t: new test

	* examples/cellrenderer_date.pl, examples/cellrenderer_popup.pl,
	examples/cellrenderer_spinbutton.pl: new examples

2003/10/22 13:31 muppetman

	stuff found while writing a documentation generator...

	* xs/GtkListStore.xs: stray semicolon
	* xs/GdkScreen.xs: arg list had an output parameter in it

2003/10/19 18:55 rwmcfa1

	* xs/GdkPixbuf.xs: two missing semicolons added, in 2.2 section so 
	wasn't caught compling on < 2.2.

2003/10/19 00:41 muppetman

	* examples/simplelist.pl, examples/scribble.pl,
	examples/histogramplot.pl: commentary cleanup and such

2003/10/18 02:41 muppetman

	* Gtk2.pm: bump version for devel series.
	* Makefile.PL: require Glib 1.01 (to pick up a new typemap)

	Made a pass through the source killing FIXMEs.
	* TODO: updated.
	* gtk.typemap, xs/GtkColorSelection.xs, xs/GtkTreeView.xs, 
	xs/GtkTreeViewColumn.xs: cleaned up
	* xs/Gdk.xs, xs/GtkTextBuffer.xs, xs/GtkTextTag.xs: use the new
	gchar_ornull typemap to clean things up
	* xs/GdkGC.xs: implemented GdkGCValues stuff, mostly by porting
	Gtk-Perl code.